--- a/tab/tab.html
+++ b/tab/tab.html
@@ -8,18 +8,22 @@
     <script type="text/javascript" src="tab.js"></script>
 </head>
 <body>
-    <div class="c-tab">
+    <div class="c-tab js-tab">
         <ul class="c-tabs__list clear">
-            <li class="c-tabs__tab">第一
+            <li class="c-tabs__tab">
+                <a class="c-tabs__button" href="#">第一</a>
                 <i class="tab-line"></i>
             </li>
-            <li class="c-tabs__tab">第二
+            <li class="c-tabs__tab">
+                <a class="c-tabs__button" href="#">第二</a>
                 <i class="tab-line"></i>
             </li>
-            <li class="c-tabs__tab">第三
+            <li class="c-tabs__tab">
+                <a class="c-tabs__button" href="#">第三</a>
                 <i class="tab-line"></i>
             </li>
-            <li class="c-tabs__tab">第四
+            <li class="c-tabs__tab">
+                <a class="c-tabs__button" href="#">第四</a>
                 <i class="tab-line"></i>
             </li>
             <li class="c-tabs__more">
