--- a/tab/tab.html
+++ b/tab/tab.html
@@ -27,7 +27,7 @@
                 <i class="tab-line"></i>
             </li>
             <li class="c-tabs__more">
-                <a href="##">更多</a>
+                <a href="##">更多 ></a>
             </li>
         </ul>
         <div class="c-tabs__panels">
